[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.10", features = ["json"] }
log = "0.4"
url = "2.2.2"
snafu = { version = "0.7.0"}

[lib]
name = "requestrust"
path = "src/lib.rs"

[package]
name = "request-rust"
version = "0.1.0"
edition = "2021"
authors = ["LamHai <lamhai141@gmail.com >"]
license = "MIT"
homepage = "https://github.com/lamhai1401/request-rustt"
repository = "https://github.com/lamhai1401/request-rustt"
documentation = "https://github.com/lamhai1401/request-rustt"
description = "Client Async Request"
